Updates Seed-dev-full.ts file
