# Backend/src/fulfillment/fulfillment.controller.ts
@@ -1,126 +1,0 @@
-import {
-  Controller,
-  Patch,
-  Param,
-  Body,
-  UseGuards,
-  Request,
-} from '@nestjs/common';
-import { FulfillmentService } from './fulfillment.service';
-import { JwtAuthGuard } from '../auth/jwt-auth.guard';
-import { RolesGuard } from '../role-permission/roles.guard';
-import { Roles } from '../role-permission/roles.decorator';
-import { FulfillOrderDto } from './dto/fulfill-order.dto';
-import { PartialDispatchDto } from './dto/partial-dispatch.dto';
-import { PartialDeliverDto } from './dto/partial-deliver.dto';
-import {
-  ApiTags,
-  ApiOperation,
-  ApiBearerAuth,
-  ApiOkResponse,
-  ApiBadRequestResponse,
-  ApiUnauthorizedResponse,
-  ApiForbiddenResponse,
-  ApiNotFoundResponse,
-  ApiConflictResponse,
-  ApiCreatedResponse,
-} from '@nestjs/swagger';
-
-@UseGuards(JwtAuthGuard, RolesGuard)
-@Controller('orders')
-@ApiTags('Fulfillment')
-export class FulfillmentController {
-  constructor(private readonly fulfillmentService: FulfillmentService) {}
-
-  @Patch(':id/confirm')
-  @Roles('SUPER_ADMIN', 'DISTRIBUTOR_ADMIN')
-  @ApiOperation({ summary: 'Confirm' })
-  @ApiBearerAuth('bearer')
-  confirm(
-    @Request() req,
-    @Param('id') id: string,
-    @Body() dto: FulfillOrderDto,
-  ) {
-    return this.fulfillmentService.confirmOrder(req.user.userId, id, dto);
-  }
-
-  @Patch(':id/processing')
-  @Roles('SUPER_ADMIN', 'DISTRIBUTOR_ADMIN')
-  @ApiOperation({ summary: 'Processing' })
-  @ApiBearerAuth('bearer')
-  processing(
-    @Request() req,
-    @Param('id') id: string,
-    @Body() dto: FulfillOrderDto,
-  ) {
-    return this.fulfillmentService.processingOrder(req.user.userId, id, dto);
-  }
-
-  @Patch(':id/packed')
-  @Roles('SUPER_ADMIN', 'DISTRIBUTOR_ADMIN')
-  @ApiOperation({ summary: 'Packed' })
-  @ApiBearerAuth('bearer')
-  packed(
-    @Request() req,
-    @Param('id') id: string,
-    @Body() dto: FulfillOrderDto,
-  ) {
-    return this.fulfillmentService.packedOrder(req.user.userId, id, dto);
-  }
-
-  @Patch(':id/dispatch')
-  @Roles('SUPER_ADMIN', 'DISTRIBUTOR_ADMIN')
-  @ApiOperation({ summary: 'Dispatch' })
-  @ApiBearerAuth('bearer')
-  dispatch(
-    @Request() req,
-    @Param('id') id: string,
-    @Body() dto: FulfillOrderDto,
-  ) {
-    return this.fulfillmentService.dispatchOrder(req.user.userId, id, dto);
-  }
-
-  @Patch(':id/deliver')
-  @Roles('SUPER_ADMIN', 'DISTRIBUTOR_ADMIN')
-  @ApiOperation({ summary: 'Deliver' })
-  @ApiBearerAuth('bearer')
-  deliver(
-    @Request() req,
-    @Param('id') id: string,
-    @Body() dto: FulfillOrderDto,
-  ) {
-    return this.fulfillmentService.deliverOrder(req.user.userId, id, dto);
-  }
-
-  @Patch(':id/partial-dispatch')
-  @Roles('SUPER_ADMIN', 'DISTRIBUTOR_ADMIN')
-  @ApiOperation({ summary: 'Partial Dispatch' })
-  @ApiBearerAuth('bearer')
-  partialDispatch(
-    @Request() req,
-    @Param('id') id: string,
-    @Body() dto: PartialDispatchDto,
-  ) {
-    return this.fulfillmentService.partialDispatchOrder(
-      req.user.userId,
-      id,
-      dto,
-    );
-  }
-
-  @Patch(':id/partial-deliver')
-  @Roles('SUPER_ADMIN', 'DISTRIBUTOR_ADMIN')
-  @ApiOperation({ summary: 'Partial Deliver' })
-  @ApiBearerAuth('bearer')
-  partialDeliver(
-    @Request() req,
-    @Param('id') id: string,
-    @Body() dto: PartialDeliverDto,
-  ) {
-    return this.fulfillmentService.partialDeliverOrder(
-      req.user.userId,
-      id,
-      dto,
-    );
-  }
-}
